# bittycompiler

./: .gitignore  CMakeLists.txt  README.md  TODO  diff
docs/: bitty_grammar.md
source/: lexer.cpp  lexer.h  main.cpp  token.h
source/common/: ast.h  token.cpp  token.h
source/lexer/: lexer.cpp  lexer.h
source/parser/: parser.cpp  parser.h
tests/lexer/: CMakeLists.txt  main.cpp
tests/parser/: CMakeLists.txt  main.cpp
